force-app/main/default/objects/DM_Other_Loan_Transaction__c/DM_Other_Loan_Transaction__c.object-meta.xml
<CustomObject>
    <label>DM Other Loan Transaction</label>
    <nameField>
        <label>DM Other Loan Transaction	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Loan Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>