force-app/main/default/objects/DM_Other_Loan_Transaction__c/fields/DM_Charged_Off_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Charged_Off_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Charged Off Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>