force-app/main/default/objects/DM_Other_Loan_Transaction__c/fields/DM_Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Remaining__c</fullName>
    <label>DM Principal Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>