force-app/main/default/objects/DM_Other_Loan_Transaction__c/fields/DM_Total_Interest_Due__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Interest_Due__c</fullName>
    <label>DM Total Interest Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>