force-app/main/default/objects/DM_Other_Loan_Transaction__c/fields/DM_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>