force-app/main/default/objects/DM_Other_Loan_Transaction__c/fields/DM_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Date__c</fullName>
    <description>Date on which Contract was Charged-off</description>
    <label>DM Transaction Date</label>
    <type>Date</type>
</CustomField>