force-app/main/default/objects/DM_Other_Loan_Transaction__c/fields/DM_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Transaction_Type__c</fullName>
    <label>DM Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>PrincipalAdjustment-Add</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Additional Repayment</fullName>
            </value>
            <value>
                <fullName>Stop Accrual</fullName>
            </value>
            <value>
                <fullName>Start Accrual</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
            <value>
                <fullName>Loan Maintenance</fullName>
            </value>
            <value>
                <fullName>One Time ACH</fullName>
            </value>
            <value>
                <fullName>Payment Tolerance Change</fullName>
            </value>
            <value>
                <fullName>Charge Off</fullName>
            </value>
            <value>
                <fullName>PayOff Quote Generation</fullName>
            </value>
            <value>
                <fullName>Recurring ACH</fullName>
            </value>
            <value>
                <fullName>Interest Waive</fullName>
            </value>
            <value>
                <fullName>Due Day Change</fullName>
            </value>
            <value>
                <fullName>Credit Limit Change</fullName>
            </value>
            <value>
                <fullName>Index Rate Change</fullName>
            </value>
            <value>
                <fullName>Delinquent Pmt Plan Reversal</fullName>
            </value>
            <value>
                <fullName>Charge Waive</fullName>
            </value>
            <value>
                <fullName>Charge Unwaive</fullName>
            </value>
            <value>
                <fullName>Contingency Status Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>