force-app/main/default/objects/DM_Other_Loan_Transaction__c/fields/DM_Waived_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Waived_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Waived Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>